# VITAMIN-E

./: CMakeLists.txt
include/: curvature.hpp  eigen.hpp  keypoint.hpp  vector.hpp
src/: affine.cpp  curvature.cpp  eigen.cpp  keypoint.cpp  main.cpp
tests/: test_curvature.cpp  test_eigen.cpp  test_keypoint.cpp  test_vector.cpp
tests/optimization/: test_robustifiers.py
vitamine/optimization/: robustifiers.py
